--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Free Mentors is a social initiative where accomplished professionals become role models to young people to provide free mentorship sessions.",
   "main": "server.js",
   "type": "module",
-
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev-start": "babel-node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -18,19 +18,19 @@
     "url": "https://github.com/Donnella14/freemantor/issues"
   },
   "homepage": "https://github.com/Donnella14/freemantor#readme",
-  "dependencies": {"@babel/cli": "^7.1.2",
+  "dependencies": {
+    "@babel/cli": "^7.1.2",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.12.10",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.9.6",
-    "babel-preset-es2015": "^6.24.1",
     "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.3"
   }
 }
