--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "test",
+    "start": "babel-node ./server.js",
     "dev-start": "babel-node ./server.js"
   },
   "repository": {
@@ -31,6 +32,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3"
   }
 }
