--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/register": "^7.12.10",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
