--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "test",
     "start": "babel-node ./server.js",
-    "dev-start": "babel-node ./server.js"
+    "dev-start": "nodemon --exec babel-node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "nodemon": "^2.0.12"
   }
 }
